improve: add jwt token to user creation response
